[package]
name = "contribcard"
description = "ContribCard CLI tool"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.85"
repository = "https://github.com/cncf/contribcard"
readme = "README.md"
authors = ["Sergio Castaño Arteaga", "Cintia Sanchez Garcia"]

[dependencies]
anyhow = "1.0.97"
askama = { version = "0.12.1", features = ["serde-json"] }
aws-config = "1.6.0"
aws-sdk-s3 = "1.79.0"
axum = "0.8.1"
chrono = "0.4.39"
clap = { version = "4.5.32", features = ["derive"] }
deadpool = "0.12.2"
dirs = "6.0.0"
duckdb = { version = "1.2.1", features = ["json"] }
futures = "0.3.31"
md-5 = "0.10.6"
mime_guess = "2.0.5"
parse_link_header = "0.4.0"
reqwest = { version = "0.12.14", features = ["json"] }
rust-embed = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tempfile = "3.19.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"

[build-dependencies]
anyhow = "1.0.88"
which = "7.0.2"
