[package]
name = "contribcard"
description = "ContribCard CLI tool"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.87"
repository = "https://github.com/cncf/contribcard"
readme = "README.md"
authors = ["Sergio Castaño Arteaga", "Cintia Sanchez Garcia"]

[dependencies]
anyhow = "1.0.98"
askama = { version = "0.14.0", features = ["serde_json"] }
aws-config = "1.6.3"
aws-sdk-s3 = "1.91.0"
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
deadpool = "0.12.2"
dirs = "6.0.0"
duckdb = { version = "1.3.0", features = ["json"] }
futures = "0.3.31"
md-5 = "0.10.6"
mime_guess = "2.0.5"
parse_link_header = "0.4.0"
reqwest = { version = "0.12.19", features = ["json"] }
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34-deprecated"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.1"
tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"

[build-dependencies]
anyhow = "1.0.98"
which = "8.0.0"
