[package]
name = "contribcard"
description = "ContribCard CLI tool"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.90.0"
repository = "https://github.com/cncf/contribcard"
readme = "README.md"
authors = ["Sergio Castaño Arteaga", "Cintia Sanchez Garcia"]

[dependencies]
anyhow = "1.0.100"
askama = { version = "0.14.0", features = ["serde_json"] }
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
axum = "0.8.6"
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
deadpool = "0.12.3"
dirs = "6.0.0"
duckdb = { version = "1.4.1", features = ["json"] }
futures = "0.3.31"
md-5 = "0.10.6"
mime_guess = "2.0.5"
parse_link_header = "0.4.0"
reqwest = { version = "0.12.24", features = ["json"] }
rust-embed = "8.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34-deprecated"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.1"
tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"

[build-dependencies]
anyhow = "1.0.100"
which = "8.0.0"
